2009-02-05  Richard Dale  <richard.j.dale@gmail.com>
* Added various special casing to the Plasma::ToolTipManager class so you can
  pass a PlasmaScripting::Applet to the methods. Thanks to Mathieu Jobin for
  reporting the bug.

2008-12-22  Richard Dale  <richard.j.dale@gmail.com>
* Changed the tiger applet example to find its tiger.svg resource from within
  the plasmoid package. Thanks to Rany Keddo for helping to get it working.

2008-12-01  Richard Dale  <richard.j.dale@gmail.com>
* Added updateAllSources() and removeSource() slots to the 
  PlasmScripting::DataEngine
* Add DBus notification to the time data engine example for when the config 
  changes

2008-11-18  Richard Dale  <richard.j.dale@gmail.com>
* Fix problem with the ruby 'type()' method clashing with the one in
  Qt::GraphicsItem subclasses reported by David Palacio
* Added a 'dbpedia-queries' data engine for making SPARQL queries to DBpedia
  about music albums
* The sources() and init() methods needn't be implemented by a scripting
  data engine

2008-11-17  Richard Dale  <richard.j.dale@gmail.com>
* Fixed missing constructor bug in Qt::GraphicsProxyWidget reported by David
  Palacio. Thanks to David for reporting the bug.
* Improved the names of the Ruby applet and dataengine examples
* Allow a PlasmaScripting::Applet to be a parent of all the Qt::GraphicsItem
  sub classes in their constructors

2008-11-05  Richard Dale  <richard.j.dale@gmail.com>
* Fixed some bugs in the DataEngineScript class. The expected path was 
  'plasma/engines' whereas the plasmapkg tool installs them in 
  'plasma/dataengines'. The mainScript() and package() methods hadn't been
  implemented and were added.
* Added a 'ruby_time' example scripting data engine

2008-10-30  Richard Dale  <richard.j.dale@gmail.com>
* Separated the script engine plugins from the plasma ruby extension and moved
  the script engine code to kdebase with the other script engines

2008-10-23  Richard Dale  <richard.j.dale@gmail.com>